--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,17 @@ spring:
         format_sql: true
         jdbc:
           time_zone: Asia/Seoul
-
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            # ??? ???
+            redirect-uri: http://ec2-52-78-205-102.ap-northeast-2.compute.amazonaws.com:8080/login/oauth2/code/google
+            client-id: ${G_CLIENT_ID}
+            client-secret: ${G_CLIENT_SECRET}
+            scope:
+              - email
   sql:
     init:
       data-locations: classpath*:db/h2/data.sql
